--- a/package.json
+++ b/package.json
@@ -9,20 +9,30 @@
     "start-prod": "NODE_ENV=production nodemon ./bin/www"
   },
   "dependencies": {
-    "bluebird": "^3.5.5",
-    "cookie-parser": "~1.4.3",
+    "bluebird": "^3.7.2",
+    "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
-    "debug": "~2.6.9",
-    "ejs": "^3.0.1",
-    "express": "~4.16.0",
+    "debug": "^4.1.1",
+    "ejs": "^3.1.2",
+    "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.7.5",
-    "mongoose-html": "0.0.1",
+    "mongoose": "^5.9.11",
+    "mongoose-html": "^0.0.1",
     "mongoose-shortid-nodeps": "^0.6.5",
-    "morgan": "~1.9.0",
+    "morgan": "^1.10.0",
     "multer": "^1.4.2",
-    "request": "^2.88.0",
-    "request-promise": "^4.2.4",
+    "request": "^2.88.2",
+    "request-promise": "^4.2.5",
     "socket.io": "^2.3.0"
+  },
+  "devDependencies": {
+    "husky": "^4.2.5",
+    "prettier": "^2.0.5",
+    "pretty-quick": "^2.0.1"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "pretty-quick --staged"
+    }
   }
 }
