--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "debug": "^4.1.1",
     "ejs": "^3.1.2",
     "express": "^4.17.1",
+    "express-validation": "^3.0.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.11",
     "mongoose-html": "^0.0.1",
