--- a/package.json
+++ b/package.json
@@ -1,40 +1,56 @@
 {
-  "name": "myapp-api",
-  "version": "0.0.0",
-  "private": true,
+  "name": "wager-api",
+  "version": "1.0.0",
+  "main": "src/index.js",
   "scripts": {
-    "start": "node ./bin/www",
-    "start-dev": "NODE_ENV=development nodemon ./bin/www",
-    "start-stage": "NODE_ENV=stagging nodemon ./bin/www",
-    "start-prod": "NODE_ENV=production nodemon ./bin/www"
-  },
-  "dependencies": {
-    "bluebird": "^3.7.2",
-    "cookie-parser": "^1.4.5",
-    "cors": "^2.8.5",
-    "debug": "^4.1.1",
-    "ejs": "^3.1.2",
-    "express": "^4.17.1",
-    "express-validation": "^3.0.2",
-    "http-status": "^1.4.2",
-    "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.9.11",
-    "mongoose-html": "^0.0.1",
-    "mongoose-shortid-nodeps": "^0.6.5",
-    "morgan": "^1.10.0",
-    "multer": "^1.4.2",
-    "request": "^2.88.2",
-    "request-promise": "^4.2.5",
-    "socket.io": "^2.3.0"
-  },
-  "devDependencies": {
-    "husky": "^4.2.5",
-    "prettier": "^2.0.5",
-    "pretty-quick": "^2.0.1"
+    "start": "node ./src/index.js",
+    "start-dev": "DEBUG=wager-api* NODE_ENV=development nodemon ./src/index.js",
+    "start-stage": "DEBUG=wager-api* NODE_ENV=stagging nodemon ./src/index.js",
+    "start-prod": "NODE_ENV=production nodemon ./src/index.js",
+    "docs": "apidoc -i src -o docs",
+    "docs-postman": "apidoc-postman -i src -o docs"
   },
   "husky": {
     "hooks": {
       "pre-commit": "pretty-quick --staged"
     }
+  },
+  "dependencies": {
+    "@sendgrid/mail": "^6.4.0",
+    "axios": "^0.19.0",
+    "bcrypt": "^3.0.6",
+    "bcryptjs": "^2.4.3",
+    "bluebird": "^3.5.5",
+    "body-parser": "^1.19.0",
+    "busboy": "^0.3.1",
+    "compression": "^1.7.4",
+    "cors": "^2.8.5",
+    "ddos": "^0.2.1",
+    "dotenv": "^8.0.0",
+    "express": "^4.17.1",
+    "express-validation": "^1.0.2",
+    "helmet": "^3.18.0",
+    "http-status": "^1.3.2",
+    "joi": "^14.3.1",
+    "jwt-simple": "^0.5.6",
+    "lodash": "^4.17.14",
+    "luxon": "^1.17.1",
+    "moment-timezone": "^0.5.26",
+    "mongoose": "^5.7.5",
+    "morgan": "^1.10.0",
+    "node-schedule": "^1.3.2",
+    "sharp": "^0.22.1",
+    "socket.io": "^2.2.0",
+    "twilio": "^3.33.1",
+    "underscore": "^1.9.1",
+    "uuid": "^3.3.2"
+  },
+  "devDependencies": {
+    "apidoc": "^0.17.7",
+    "apidoc-postman": "0.0.92",
+    "nodemon": "^1.19.1",
+    "husky": "^4.2.5",
+    "prettier": "^2.0.5",
+    "pretty-quick": "^2.0.1"
   }
 }
