--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "wager-api",
+  "name": "doctorbuddy-api",
   "version": "1.0.0",
   "main": "src/index.js",
   "scripts": {
     "start": "node ./src/index.js",
-    "start-dev": "DEBUG=wager-api* NODE_ENV=development nodemon ./src/index.js",
-    "start-stage": "DEBUG=wager-api* NODE_ENV=stagging nodemon ./src/index.js",
+    "start-dev": "DEBUG=myapp-api* NODE_ENV=development nodemon ./src/index.js",
+    "start-stage": "DEBUG=myapp-api* NODE_ENV=stagging nodemon ./src/index.js",
     "start-prod": "NODE_ENV=production nodemon ./src/index.js",
     "docs": "apidoc -i src -o docs",
     "docs-postman": "apidoc-postman -i src -o docs"
@@ -29,6 +29,7 @@
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "express-validation": "^1.0.2",
+    "firebase-admin": "^8.12.1",
     "helmet": "^3.18.0",
     "http-status": "^1.3.2",
     "joi": "^14.3.1",
@@ -37,6 +38,7 @@
     "luxon": "^1.17.1",
     "moment-timezone": "^0.5.26",
     "mongoose": "^5.7.5",
+    "mongoose-delete": "^0.5.2",
     "morgan": "^1.10.0",
     "node-schedule": "^1.3.2",
     "sharp": "^0.22.1",
@@ -48,8 +50,8 @@
   "devDependencies": {
     "apidoc": "^0.17.7",
     "apidoc-postman": "0.0.92",
-    "nodemon": "^1.19.1",
     "husky": "^4.2.5",
+    "nodemon": "^1.19.1",
     "prettier": "^2.0.5",
     "pretty-quick": "^2.0.1"
   }
